<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tat_ca"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_tat_ca_cong_viec" />

        <item
            android:id="@+id/nav_cong_viec"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_cong_viec" />

        <item
            android:id="@+id/nav_ca_nhan"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_ca_nhan" />

        <item
            android:id="@+id/nav_khan_cap"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/menu_khan_cap" />

        <item
            android:id="@+id/nav_hoan_thanh"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/menu_da_hoan_thanh" />
    </group>

    <item android:title="@string/menu_khac">
        <menu>
            <item
                android:id="@+id/nav_cai_dat"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_cai_dat" />
            <item
                android:id="@+id/nav_gioi_thieu"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_gioi_thieu" />
        </menu>
    </item>

</menu>
